# wike

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.go  go.mod  tasks.go
.github/: copilot-instructions.md
.github/instructions/: changelog-format.instructions.md  commit-guidelines.instructions.md
.github/prompts/: generate-changelog.prompt.md  suggest-commit.prompt.md
.github/workflows/: ci.yml  release.yml
assets/: res.rc
cmd/wike/: main.go
cmd/wike-daemon/: main.go
internal/app/: app.go
internal/config/: config.go  events.go  loader.go  model.go  region.go  vkcodes.go
internal/logger/: logger.go
internal/settings/: config.go  events.go  loader.go  model.go  region.go  settings.go  vkcodes.go
internal/shared/: geometry.go  shared.go
internal/win/: actions.go  dll.go  hooks.go  input.go  runtime.go  win.go  window.go
src/: config.rs  hooks.rs  main.rs  utils.rs
