[package]
name = "twike"
version = "0.0.0"
authors = ["Kh4f <kh4f.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/kh4f/twike"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
windows = { version = "0.62.2", features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_Shell",
] }

[lints.rust]
unused_must_use = "allow"